<resources>
    <string name="about_content_abount_novels">相关小说</string>
    <string name="about_content_author_other_works">%s老师其它作品</string>
    <string name="about_content_same_kinkd">同类题材作品</string>
    <string name="about_content_title">相关内容</string>
    <string name="action_settings">Settings</string>
    <string name="action_splash">splash</string>
    <string name="ad_ad_corner_sign">广告</string>
    <string name="ad_adtitle">广告</string>
    <string name="ad_donwloading">正在下载-%s</string>
    <string name="ad_downcomplete">下载完成,点击查看</string>
    <string name="ad_godownload">启动下载任务</string>
    <string name="ad_recommand">推荐</string>
    <string name="alter_pic_cacel">取消</string>
    <string name="alter_pic_select_album">从相册选择</string>
    <string name="alter_pic_take_photo">拍照</string>
    <string name="app_name">动漫之家</string>
    <string name="app_update_atonce">现在升级</string>
    <string name="app_update_momnet">暂不升级</string>
    <string name="app_update_title">升级提示</string>
    <string name="app_welcome">Copyright © dmzj.com , All Rights Reserved</string>
    <string name="author_header">作者:%s</string>
    <string name="author_intro_detail_enco">%s[详情]</string>
    <string name="author_intro_his_carttons">它的漫画作品(%s)</string>
    <string name="author_intro_recommand_all">全部订阅</string>
    <string name="author_no_author">无</string>
    <string name="auto_play_cancel_text">取消</string>
    <string name="booklist_all_booklist">全部书单</string>
    <string name="booklist_comment">评论</string>
    <string name="booklist_comment_with_count">评论(%s)</string>
    <string name="booklist_crated">创建的书单</string>
    <string name="booklist_create_time">创建时间</string>
    <string name="booklist_his_booklist">他的书单</string>
    <string name="booklist_how_store_num">%s次收藏</string>
    <string name="booklist_how_store_num_people">%s人收藏</string>
    <string name="booklist_how_works_num">%s部作品</string>
    <string name="booklist_novel">小说书单</string>
    <string name="booklist_share">分享</string>
    <string name="booklist_store_booklist">收藏书单</string>
    <string name="booklist_store_num">收藏数</string>
    <string name="booklist_store_users_title">收藏书单的网友</string>
    <string name="booklist_stored">收藏的书单</string>
    <string name="booklist_subscribe_all">全部订阅</string>
    <string name="browse_ad_finally_title">您已看完现有章节……是时候上车了！</string>
    <string name="browse_ad_title">即将进入下一章节...是时候上车了!</string>
    <string name="browse_addview_club">订阅</string>
    <string name="browse_addview_share">分享</string>
    <string name="browse_brightness_next_into_valid">已设置为系统亮度，将在下次进入此界面时生效</string>
    <string name="browse_cancel_store">已订阅</string>
    <string name="browse_close_voice">关闭吐槽</string>
    <string name="browse_go_unziping">解压本地章节...</string>
    <string name="browse_goto_voice">大家来吐槽</string>
    <string name="browse_harding_loading">正在努力加载...</string>
    <string name="browse_hscreen">横屏</string>
    <string name="browse_leftmodel">左手模式</string>
    <string name="browse_light">亮度</string>
    <string name="browse_menu">菜单</string>
    <string name="browse_more_voice">更多吐槽</string>
    <string name="browse_navi_already_change_toroll">此漫画是条漫，默认滚动阅读模式</string>
    <string name="browse_navi_pattern">第%s话</string>
    <string name="browse_navi_roll_mode">滚动阅读</string>
    <string name="browse_navi_turn_page_mode">翻页阅读</string>
    <string name="browse_nextpage">下一页</string>
    <string name="browse_open_voice">显示吐槽</string>
    <string name="browse_oprationware">帮助</string>
    <string name="browse_page">页</string>
    <string name="browse_page_animation">翻页动画</string>
    <string name="browse_prepage">上一页</string>
    <string name="browse_rightmodel">右手模式</string>
    <string name="browse_store">订阅</string>
    <string name="browse_subscribed">已订阅</string>
    <string name="browse_terminal_warning">已经到头了...</string>
    <string name="browse_timeout">连接超时,请重试</string>
    <string name="browse_unzip_warning">正在努力解压...</string>
    <string name="browse_use_3g_friendly_warning">您正在使用移动网络，请注意流量哦!</string>
    <string name="browse_use_systemlight">系统亮度</string>
    <string name="browse_v_menu">"菜
单"</string>
    <string name="browse_v_nextpage">"下
一
页"</string>
    <string name="browse_v_vprepage">"上
一
页"</string>
    <string name="browse_version_com">标清</string>
    <string name="browse_version_hd">高清</string>
    <string name="browse_vscreen">竖屏</string>
    <string name="button_cancel_download">Cancel</string>
    <string name="button_queue_for_wifi">Queue</string>
    <string name="button_start_now">Start now</string>
    <string name="cartoon_instr_about_info">相关内容</string>
    <string name="cartoon_instr_add_book_list">加入书单</string>
    <string name="cartoon_instr_author_announce">作者公告</string>
    <string name="cartoon_instr_author_instruction_text">登录后可以使用漫画订阅、发表评论等，我们还会提醒您订阅的作品更新哦</string>
    <string name="cartoon_instr_author_title">作者公告</string>
    <string name="cartoon_instr_book_announce">作品公告</string>
    <string name="cartoon_instr_book_inst">作品介绍</string>
    <string name="cartoon_instr_check_all">查看全文</string>
    <string name="cartoon_instr_check_mark">查看书签</string>
    <string name="cartoon_instr_click">点击 %s</string>
    <string name="cartoon_instr_commic_chpaters">漫画章节</string>
    <string name="cartoon_instr_commic_discuss">作品讨论(%s)</string>
    <string name="cartoon_instr_commic_discuss_non">作品讨论</string>
    <string name="cartoon_instr_commic_discusss">作品讨论</string>
    <string name="cartoon_instr_commic_message_number">(%s)</string>
    <string name="cartoon_instr_continue_read">继续阅读</string>
    <string name="cartoon_instr_download">下载</string>
    <string name="cartoon_instr_more_discuss">更多评论(%s)</string>
    <string name="cartoon_instr_more_discuss_non">更多评论(%s)</string>
    <string name="cartoon_instr_no_more_commnets">更多评论</string>
    <string name="cartoon_instr_none">暂无公告</string>
    <string name="cartoon_instr_order">订阅漫画</string>
    <string name="cartoon_instr_order_nig">倒序</string>
    <string name="cartoon_instr_order_positive">正序</string>
    <string name="cartoon_instr_popularity">人气 %s</string>
    <string name="cartoon_instr_post">发表新贴</string>
    <string name="cartoon_instr_share">分享</string>
    <string name="cartoon_instr_start_read">开始阅读</string>
    <string name="cartoon_instr_subcancel">取消订阅</string>
    <string name="cartoon_instr_subscribe">订阅 %s</string>
    <string name="cartoon_instr_title">漫画介绍</string>
    <string name="cartoon_latest_all">全部漫画</string>
    <string name="cartoon_latest_original">原创漫画</string>
    <string name="cartoon_latest_translation">译制漫画</string>
    <string name="cbrowse_anounce">吐槽</string>
    <string name="cbrowse_anounce_show">吐槽方式</string>
    <string name="cbrowse_anounce_show_tanmu">弹幕模式</string>
    <string name="cbrowse_anounce_show_tucao">吐槽模式</string>
    <string name="cbrowse_close">收起</string>
    <string name="cbrowse_connect_error">网络错误</string>
    <string name="cbrowse_detail">详细</string>
    <string name="cbrowse_error_report">报错</string>
    <string name="cbrowse_load_error">加载中...</string>
    <string name="cbrowse_loading">加载中...</string>
    <string name="cbrowse_options">选项</string>
    <string name="cbrowse_page_oraintation">翻页方向</string>
    <string name="cbrowse_page_pager">翻页方向</string>
    <string name="cbrowse_page_scoll">滚屏方式</string>
    <string name="cbrowse_scren_horizental">横屏阅读</string>
    <string name="cbrowse_scren_oriatation">屏幕方向</string>
    <string name="cbrowse_scren_vertical">竖屏阅读</string>
    <string name="cbrowse_share">分享</string>
    <string name="cbrowse_v_screen_mode_available">竖屏阅读有效</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="com.crashlytics.android.build_id">b6a65e7d-b809-480a-a6a3-7e626f11991c</string>
    <string name="comment_comment">评论</string>
    <string name="comment_comment_detail">评论详情</string>
    <string name="comment_comment_error">获取评论列表失败!</string>
    <string name="comment_comment_his">他的评论</string>
    <string name="comment_comment_mine">我的评论</string>
    <string name="comment_comment_priased">已经点过赞喽!</string>
    <string name="comment_comment_repley_to">回复:</string>
    <string name="comment_comment_repley_to_formart">回复 %s:</string>
    <string name="comment_comment_reply_unit">回复</string>
    <string name="comment_comment_unit">条</string>
    <string name="comment_count">%s条</string>
    <string name="comment_hot_comment">热门评论</string>
    <string name="comment_latest_comment">最新评论</string>
    <string name="comment_more_comment">更多评论(%s)</string>
    <string name="comment_more_input_comment">发表评论</string>
    <string name="comment_more_input_comments">发表你的观点...</string>
    <string name="comment_reply">回复</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">显示更多</string>
    <string name="detail_charpter_title_alone">单行本</string>
    <string name="detail_charpter_title_nag">连载</string>
    <string name="detail_down_isinvalid_downinfo">下载校验中,稍等...</string>
    <string name="detail_download_in_mobile_warning">当前是在移动网络，将使用%s流量，是否确定下载？</string>
    <string name="detail_file_error">文件不存在或已被破坏!</string>
    <string name="detail_now_networkwarning">当前没有可用网络，请检查您的网络连接！</string>
    <string name="detail_read_in_mobile_warning">当前是在移动网络，是否观看？</string>
    <string name="download_3g_notallow">3G模式下载未开启</string>
    <string name="download_begin_down">开始下载</string>
    <string name="download_deselect_all">反选</string>
    <string name="download_deselect_all_2">取消全选</string>
    <string name="download_down_all_read">设为已读</string>
    <string name="download_down_append">追加</string>
    <string name="download_down_arrenge">管理</string>
    <string name="download_down_complete">下载完成</string>
    <string name="download_down_complete_arr">完成</string>
    <string name="download_down_delete">删除</string>
    <string name="download_down_dir">目录</string>
    <string name="download_down_downloading">正在下载</string>
    <string name="download_down_pause_all">全部暂停</string>
    <string name="download_down_selected_num">已选择%s项</string>
    <string name="download_down_start_all">全部开始</string>
    <string name="download_download">下载</string>
    <string name="download_mobile_force_downwarning_desc">您正在使用移动网络，本次下载将消耗您的移动流量，确定下载漫画吗？</string>
    <string name="download_mobile_force_downwarning_title">下载提示</string>
    <string name="download_select_all">全选</string>
    <string name="errcode_shared_to">分享到</string>
    <string name="regist_bottom_text">加入动漫之家</string>
    <string name="regist_fetch_code">获取验证码</string>
    <string name="regist_hint_phone">请输入手机号</string>
    <string name="regist_hint_rpwd">确认密码</string>
    <string name="regist_hint_username">请填写用户名</string>
    <string name="regist_input_code">输入验证码</string>
    <string name="regist_pwd_nosame"> 两次密码不一致</string>
    <string name="regist_pwd_ok">   密码符合要求</string>
    <string name="settings_cartoon_left2right">从左往右</string>
    <string name="settings_cartoon_right2left">从右往左</string>
    <string name="settings_cartoon_uptodown">从上往下</string>
    <string name="shared_2_copy_link">复制链接</string>
    <string name="shared_2_firend_circle">微信朋友圈</string>
    <string name="shared_2_qq">QQ好友</string>
    <string name="shared_2_qqzone">QQ空间</string>
    <string name="shared_2_save_album">保存到相册</string>
    <string name="shared_2_sina">新浪微博</string>
    <string name="shared_2_wechart_friend">微信好友</string>
    <string name="text_edit_booklist_choose_mark">请选择标签</string>
    <string name="text_edit_booklist_cover">封面</string>
    <string name="text_edit_booklist_des">描述</string>
    <string name="text_edit_booklist_favourite">个人最喜欢的漫画</string>
    <string name="text_edit_booklist_mark">标签</string>
    <string name="text_edit_booklist_no_des">暂无描述</string>
    <string name="text_edit_booklist_title">标题</string>
    <string name="text_edit_booklist_vis_to_follow">仅对关注我的漫友公开</string>
    <string name="text_edit_booklist_visibile">公开此书单</string>
</resources>