<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/navigation_bar_default" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin">
        <RelativeLayout android:id="@id/rl_cover" android:clickable="true" android:layout_width="fill_parent" android:layout_height="125.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_edit_booklist_cover" android:layout_centerVertical="true" />
            <ImageView android:id="@id/iv_cover" android:background="@drawable/ic_launcher" android:layout_width="80.0dip" android:layout_height="100.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <include layout="@layout/divider_line_black" />
        <RelativeLayout android:id="@id/rl_titile" android:layout_width="fill_parent" android:layout_height="45.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_edit_booklist_title" android:layout_centerVertical="true" />
            <TextView android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_edit_booklist_favourite" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <include layout="@layout/divider_line_black" />
        <RelativeLayout android:id="@id/rl_mark" android:layout_width="fill_parent" android:layout_height="45.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_edit_booklist_mark" android:layout_centerVertical="true" />
            <TextView android:id="@id/tv_mark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_edit_booklist_choose_mark" android:singleLine="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <include layout="@layout/divider_line_black" />
        <RelativeLayout android:id="@id/rl_des" android:layout_width="fill_parent" android:layout_height="125.0dip" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_edit_booklist_des" android:layout_centerVertical="true" />
            <TextView android:id="@id/tv_des" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/text_edit_booklist_no_des" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <include layout="@layout/divider_line_black" />
        <RelativeLayout android:id="@id/rl_visibility" android:layout_width="fill_parent" android:layout_height="45.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_edit_booklist_visibile" android:layout_centerVertical="true" />
            <TextView android:id="@id/tv_visibility" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_edit_booklist_vis_to_follow" android:drawableRight="@drawable/img_more_s" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <include layout="@layout/divider_line_black" />
    </LinearLayout>
</LinearLayout>