<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:paddingLeft="@dimen/common_ui_horizontal_marg" android:paddingRight="@dimen/common_ui_horizontal_marg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.dmzj.manhua.views.CircleImageView android:layout_gravity="center_horizontal" android:id="@id/iv_head" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="25.0dip" android:src="@drawable/img_app_icon" />
    <EditText android:id="@id/et_username" android:layout_marginTop="20.0dip" android:hint="@string/regist_hint_username" style="@style/editext_regist_style" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_ui_horizontal_marg">
        <EditText android:id="@id/et_phone" android:layout_width="0.0dip" android:layout_marginTop="0.0dip" android:hint="@string/regist_hint_phone" android:layout_weight="2.0" style="@style/editext_regist_style" />
        <Button android:textSize="@dimen/txt_size_third" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_fetch_code" android:background="@drawable/shape_rectangle_regist_button_selector" android:layout_width="0.0dip" android:layout_height="38.0dip" android:layout_marginLeft="5.0dip" android:text="@string/regist_fetch_code" android:layout_weight="1.0" />
    </LinearLayout>
    <EditText android:id="@id/et_code" android:hint="@string/regist_input_code" style="@style/editext_regist_style" />
    <RelativeLayout android:orientation="horizontal" android:background="@drawable/shape_rectangle_color_white_border_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_ui_horizontal_marg">
        <EditText android:id="@id/et_pwd" android:background="@null" android:layout_marginTop="0.0dip" android:hint="@string/regist_hint_rpwd" android:inputType="textPassword" style="@style/editext_regist_style" />
        <TextView android:id="@id/tv_pwd_status" android:paddingRight="@dimen/common_ui_horizontal_marg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/regist_pwd_ok" android:drawableLeft="@drawable/img_cir_more" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:background="@drawable/shape_rectangle_color_white_border_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/common_ui_horizontal_marg">
        <EditText android:id="@id/et_rpwd" android:background="@null" android:layout_marginTop="0.0dip" android:hint="@string/regist_hint_rpwd" android:inputType="textPassword" style="@style/editext_regist_style" />
        <TextView android:id="@id/tv_rpwd_status" android:paddingRight="@dimen/common_ui_horizontal_marg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/regist_pwd_nosame" android:drawableLeft="@drawable/img_icon_del" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dip" android:layout_marginBottom="13.0dip">
        <CheckBox android:id="@id/checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" style="@style/MyCheckBox" />
        <TextView android:id="@id/tv_agreement" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <Button android:textSize="@dimen/txt_size_second" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_regist" android:background="@drawable/shape_rectangle_regist_button_selector" android:layout_width="fill_parent" android:layout_height="@dimen/line_option_button_height" android:text="@string/regist_bottom_text" />
</LinearLayout>