<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout_main" android:background="@color/common_half_transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_share" android:background="@android:color/white" android:layout_width="wrap_content" android:layout_height="170.0dip" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="vertical" android:id="@id/layout_shared_icons" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <com.dmzj.manhua.views.MySelctorTextView android:textColor="@color/color_selector_comm_gray_high" android:gravity="center_horizontal" android:id="@id/img_share_weibo" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/shared_2_sina" android:drawableTop="@drawable/img_share_weibo" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
                <com.dmzj.manhua.views.MySelctorTextView android:textColor="@color/color_selector_comm_gray_high" android:gravity="center_horizontal" android:id="@id/img_share_qq" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/shared_2_qq" android:drawableTop="@drawable/img_share_qq" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
                <com.dmzj.manhua.views.MySelctorTextView android:textColor="@color/color_selector_comm_gray_high" android:gravity="center_horizontal" android:id="@id/img_share_friend_circle" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/shared_2_firend_circle" android:drawableTop="@drawable/img_share_friend_circle" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
                <com.dmzj.manhua.views.MySelctorTextView android:textColor="@color/color_selector_comm_gray_high" android:gravity="center_horizontal" android:id="@id/img_share_qq_zone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/shared_2_qqzone" android:drawableTop="@drawable/img_share_qq_zone" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="3.0dip" android:layout_weight="1.0">
                <com.dmzj.manhua.views.MySelctorTextView android:textColor="@color/color_selector_comm_gray_high" android:gravity="center_horizontal" android:id="@id/img_share_weixin" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/shared_2_wechart_friend" android:drawableTop="@drawable/img_share_weixin" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
                <com.dmzj.manhua.views.MySelctorTextView android:textColor="@color/color_selector_comm_gray_high" android:gravity="center_horizontal" android:id="@id/img_share_copy_link" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/shared_2_copy_link" android:drawableTop="@drawable/img_share_copy_link" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
                <com.dmzj.manhua.views.MySelctorTextView android:textColor="@color/color_selector_comm_gray_high" android:gravity="center_horizontal" android:id="@id/img_share_save_album" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/shared_2_save_album" android:drawableTop="@drawable/img_share_save_album" android:drawablePadding="2.0dip" android:layout_weight="1.0" />
                <com.dmzj.manhua.views.MySelctorTextView android:id="@id/img_share_qq_weibo" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/img_share_qq_weibo" android:scaleType="center" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textColor="@color/comm_gray_high" android:gravity="center" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/errcode_shared_to" android:layout_above="@id/layout_shared_icons" />
    </RelativeLayout>
</RelativeLayout>