<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/summery_layout" android:background="@android:color/transparent" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/topv" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/gp_summary_action_layout" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <TextView android:textColor="@android:color/black" android:id="@id/tv_cartoon_uptodown" android:background="@drawable/selector_comm_btn_gray" android:clickable="true" android:text="@string/settings_cartoon_uptodown" style="@style/select_photo_style" />
        <TextView android:textColor="@android:color/black" android:id="@id/tv_cartoon_left2right" android:background="@drawable/selector_comm_btn_gray" android:clickable="true" android:layout_marginTop="4.0dip" android:text="@string/settings_cartoon_left2right" style="@style/select_photo_style" />
        <TextView android:textColor="@android:color/black" android:id="@id/tv_cartoon_right2left" android:background="@drawable/selector_comm_btn_gray" android:clickable="true" android:layout_marginTop="4.0dip" android:text="@string/settings_cartoon_right2left" style="@style/select_photo_style" />
        <TextView android:textColor="@android:color/white" android:id="@id/btn_cancel" android:background="@drawable/selector_comm_btn_blue" android:clickable="true" android:layout_marginTop="8.0dip" android:text="@string/alter_pic_cacel" style="@style/select_photo_style" />
    </LinearLayout>
    <View android:id="@id/others" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/gp_summary_action_layout" android:layout_below="@id/topv" />
</RelativeLayout>