<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout_editstatus_oprations" android:background="@android:color/white" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/view_common_title_bottom_line_h" android:layout_alignBottom="@id/layout_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/txt_size_second" android:textColor="@color/comm_gray_high" android:gravity="center_vertical" android:id="@id/txt_select_shower" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:text="@string/download_down_selected_num" android:drawablePadding="5.0dip" android:layout_centerVertical="true" android:onClick="onBack" />
    <TextView android:textSize="@dimen/txt_size_second" android:textColor="@color/color_selector_comm_blue_high" android:gravity="center" android:id="@id/arrenge_complete" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:text="@string/download_down_complete_arr" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="onAction" />
    <TextView android:textSize="@dimen/txt_size_second" android:textColor="@color/color_selector_comm_blue_high" android:gravity="center" android:id="@id/arrenge_select" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:text="@string/download_select_all" android:layout_toLeftOf="@id/arrenge_complete" android:layout_centerVertical="true" android:onClick="onAction" />
    <TextView android:textSize="@dimen/txt_size_second" android:textColor="@color/color_selector_comm_red_high" android:gravity="center" android:id="@id/arrenge_del" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:text="@string/download_down_delete" android:layout_toLeftOf="@id/arrenge_select" android:layout_centerVertical="true" android:onClick="onAction" />
    <TextView android:textSize="@dimen/txt_size_second" android:textColor="@color/color_selector_comm_blue_high" android:gravity="center" android:id="@id/arrenge_all_read" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:text="@string/download_down_all_read" android:layout_toLeftOf="@id/arrenge_del" android:layout_centerVertical="true" android:onClick="onAction" />
</RelativeLayout>