<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_title" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="@dimen/view_titlebar_hei">
        <RadioGroup android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/radiogroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:layout_alignParentBottom="true" android:layout_centerInParent="true">
            <RadioButton android:textSize="@dimen/txt_size_second" android:textColor="@color/color_selector_navibar_blue_white" android:id="@id/btn_complete" android:background="@drawable/selector_title_tab_left" android:paddingLeft="10.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="28.0dip" android:checked="true" android:text="@string/download_down_complete" style="@style/regist_tab" />
            <RadioButton android:textSize="@dimen/txt_size_second" android:textColor="@color/color_selector_navibar_blue_white" android:id="@id/btn_downloading" android:background="@drawable/selector_title_tab_right" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/download_down_downloading" style="@style/regist_tab" />
        </RadioGroup>
        <TextView android:textSize="@dimen/txt_size_second" android:textColor="@color/comm_gray_high" android:gravity="center_vertical" android:id="@id/back" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:clickable="true" android:layout_width="50.0dip" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:drawableLeft="@drawable/img_back" android:drawablePadding="5.0dip" android:layout_centerVertical="true" android:onClick="onBack" />
        <TextView android:textSize="@dimen/txt_size_second" android:textColor="@color/color_selector_comm_blue_high" android:gravity="center" android:id="@id/action" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_marginRight="13.0dip" android:text="@string/download_down_arrenge" android:drawablePadding="5.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="onAction" />
        <ImageView android:background="@drawable/common_navi_line" android:layout_width="fill_parent" android:layout_height="@dimen/view_common_title_bottom_line_h" android:layout_alignParentBottom="true" />
        <include layout="@layout/block_editstatus_oprations" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/layout_controls" android:background="@drawable/shape_rectangle_white_top_gray_line" android:layout_width="fill_parent" android:layout_height="@dimen/view_bottom_bar_hei" android:layout_alignParentBottom="true">
        <TextView android:textColor="@color/color_selector_comm_gray_mid" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/control_dir" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/download_down_dir" android:drawableTop="@drawable/selector_img_btn_dir_grey" android:layout_weight="1.0" />
        <TextView android:textColor="@color/color_selector_comm_gray_mid" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/control_append" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/download_down_append" android:drawableTop="@drawable/selector_img_btn_append" android:layout_weight="1.0" />
        <TextView android:textColor="@color/color_selector_comm_gray_mid" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/control_pause_all" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/download_down_pause_all" android:drawableTop="@drawable/selector_img_down_pause" android:layout_weight="1.0" />
        <TextView android:textColor="@color/color_selector_comm_gray_mid" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/control_start_all" android:padding="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/download_down_start_all" android:drawableTop="@drawable/selector_img_btn_play_grey" android:layout_weight="1.0" />
    </LinearLayout>
    <android.support.v4.view.ViewPager android:id="@id/viewpagger" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/layout_controls" android:layout_below="@id/layout_title" />
</RelativeLayout>